--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/user-event": "^14.4.3",
     "antd": "^5.10.1",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
